manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: aatest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aatest
  template:
    metadata:
      labels:
        app: aatest
    spec:
      containers:
        - name: aatest
          image: ceappacr.azurecr.io/aatest
          ports:
          - containerPort: 8080
