manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aztest-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: aztest.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: aztest
            port:
              number: 8080
        pathType: Prefix
